--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     <body>
      <h1>Madig</h1>
      <p>nuevo pagina web de prueba</p>
+     <p>saludo instructor, todo perfecto</p>
     </body>
 </html>
