Modificando titulo principal

--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
-<html>
-    <head>
-
-    </head>
-    <body>
-     <h1>Madig</h1>
-     <p>nuevo pagina web de prueba</p>
-     <p>saludo instructor, todo perfecto</p>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ADSI_2280204</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    <h1>MADIG</h1>
+    <p>pagina en proceso de desarrollo</p>
+    <p>promete ser la mejor de mercaderia de productos</p>
+</body>
 </html>
