Modificando font size

--- a/index.html
+++ b/index.html
@@ -11,5 +11,11 @@
     <h1>MADIG</h1>
     <p>pagina en proceso de desarrollo</p>
     <p>promete ser la mejor de mercaderia de productos</p>
+    <br><br>
+
+    <h2>Ejemplo de font zice</h2>
+    <h3>Tamaño de parrafo de 16 pixeles</h3>
+    <P class="big-font">este es un parrafo de tamaño de 50 pixeles</P>
+
 </body>
 </html>
