Modificando peso de fuente

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <h2>Ejemplo de font zice</h2>
     <h3>Tamaño de parrafo de 16 pixeles</h3>
     <P class="big-font">este es un parrafo de tamaño de 50 pixeles</P>
+    <br><br>
 
+    <h2>Ejemplo de font-weight</h2>
+    <p class="fuente-normal">Este es un parrafo con peso de fuente de 400</p>
+    <p class="fuente-negrita">Este es un parrafo con peso de fuente de negrita</p>
 </body>
 </html>
