Agregar fuente de google fonts

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ADSI_2280204</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel = "preconnect" href = "https://fonts.gstatic.com">
+    <link href = "https://fonts.googleapis.com/css2? family = Merienda + One & display = swap" rel = "hoja de estilo">
+    <link rel = "preconnect" href = "https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Merienda+One&display=swap" rel="stylesheet">   
+
+    
 </head>
 <body>
     <h1>MADIG</h1>
@@ -21,5 +28,14 @@
     <h2>Ejemplo de font-weight</h2>
     <p class="fuente-normal">Este es un parrafo con peso de fuente de 400</p>
     <p class="fuente-negrita">Este es un parrafo con peso de fuente de negrita</p>
+    <br><br>
+
+    <h2>Ejemplo de font_style</h2>
+    <p class="estilo-normal">este es un parrafo con un estilo normal</p>
+    <p class="estilo-italico">este es un parrafo con un estilo de fuente italica</p>
+    <h2>Ejemplo de font-family</h2>
+    <h3>Fuente de google - online</h3>
+    <p class="fuente-frase">Discutir con una mujer, es como ser embestido por un oso... lo mejor es hacerse el muerto, con la esperanza de que se aburra y se vaya.</p>
+    <p class="fuente-bungge">Espiritu de lucha</p>
 </body>
 </html>
