Aliniacion de texto

--- a/listas.html
+++ b/listas.html
@@ -4,15 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ADSI_2280204</title>
+    <title>Listas HTML</title>
     <link rel="stylesheet" href="css/style.css">
-   
-    
 </head>
 <body>
-    <h1>MADIG</h1>
-    <p>pagina en proceso de desarrollo</p>
-    <p>promete ser la mejor de mercaderia de productos</p>
     <ul>
         <li><a href="index.html">inicio</a></li>
         <li><a href="fuentes.html">Fuentes</a></li>
@@ -21,7 +16,24 @@
         <li><a href="aliniacion.html">Aliniacion</a></li>
 
     </ul>
+    <h1>Listas</h1>
+    <H2>Lista Ordenada</H2>
+    <ol><span class="titulo-lista">Productos</span>
+        <li>arroz</li>
+        <li>panela</li>
+        <li>azucar</li>
+    </ol>
     <br><br>
+<h2>Lista Desordenada</h2>
+    <ul>
+        <li>inicio</li>
+        <li>productos</li>
+        <li>servicios</li>
+        <li>empresa</li>
+        <li>catalogo</li>
+        <li>clientes</li>
+        <li>promociones</li>
+    </ul>
     
 </body>
 </html>
